@@ -281,13 +281,14 @@
     <string name="style_choose_title">Thème de l’application</string>
     <string name="style_choose_summary">Thème utilisé dans l’application</string>
     <string-array name="list_style_names">
-        <item>Thème Jour</item>
-        <item>Thème Nuit</item>
-        <item>Thème Noir</item>
-        <item>Thème Foncé Classique</item>
-        <item>Thème Ciel et Océan</item>
-        <item>Thème Rouge Volcan</item>
-        <item>Thème Pro Violet</item>
+        <item>Jour</item>
+        <item>Nuit</item>
+        <item>Noir</item>
+        <item>Foncé Classique</item>
+        <item>Ciel et Océan</item>
+        <item>Rouge Volcan</item>
+        <item>Pourpre Lumineux</item>
+        <item>Pourpre Obscur</item>
     </string-array>
     <string name="icon_pack_choose_title">Collection d’icônes</string>
     <string name="icon_pack_choose_summary">Collection d’icônes utilisées dans l’application</string>
