@@ -499,7 +499,8 @@
         <item>Classic Dark</item>
         <item>Sky and Ocean</item>
         <item>Red Volcano</item>
-        <item>Purple Pro</item>
+        <item>Purple Light</item>
+        <item>Purple Dark</item>
     </string-array>
     <string name="icon_pack_choose_title">アイコンパック</string>
     <string name="icon_pack_choose_summary">アプリで使用するアイコンパック</string>
