@@ -564,7 +564,8 @@
         <item>Classic Dark</item>
         <item>Sky and Ocean</item>
         <item>Red Volcano</item>
-        <item>Purple Pro</item>
+        <item>Purple Light</item>
+        <item>Purple Dark</item>
     </string-array>
     <string name="icon_pack_choose_title">Icon pack</string>
     <string name="icon_pack_choose_summary">Icon pack used in the app</string>
