@@ -24,7 +24,7 @@
         <item name="colorPrimaryDark">@color/blue_dark</item>
         <item name="colorAccent">@color/blue_white</item>
         <item name="colorAccentLight">@color/blue_lighter</item>
-        <item name="colorControlActivated">@color/blue</item>
+        <item name="colorControlActivated">@color/blue_lighter</item>
         <item name="android:textColorPrimary">@color/blue_light</item>
         <item name="android:textColorHintInverse">@color/blue_lighter</item>
         <item name="android:windowBackground">@color/background_light</item>
