@@ -62,7 +62,8 @@
     <style name="KeepassDXStyle.Dark.Dialog" parent="KeepassDXStyle.Night.Dialog">
         <item name="colorAccent">#fefefe</item>
         <item name="android:textColorPrimary">@color/cyan_lighter</item>
-        <item name="background">@color/darker</item>
+        <item name="android:background">@color/grey_black</item>
+        <item name="background">@color/grey_black</item>
     </style>
     <!-- CardView -->
     <style name="KeepassDXStyle.Cardview.Dark" parent="CardView">
