@@ -3,4 +3,5 @@
  * Allow Emoji #796
  * Scroll and better UI in entry edition screen #876
  * Better UI #876
+ * Fix themes and add Purple Dark #889
  * Allow OTP with many padding #585
