@@ -3,4 +3,5 @@
  * Autoriser les Emoji #796
  * Défilement et amélioration de l'UI dans l'écran d'édition #876
  * Meilleure interface utilisateur #876
+ * Correction des thèmes et ajout de Pourpre Sombre #889
  * Autoriser l'OTP avec de nombreux rembourrages #585
